# surface_reconstruction

./: CMakeLists.txt  README.md  main.cpp  three_d_grid.cpp  three_d_grid.h
